Be more flexible

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: generic
 
 install: 
+  # Get my folder
+  - my_github=${PWD##*/}  
   # shunit2
-  - cd ..; git clone https://github.com/kward/shunit2.git; cd shunit2_example_1
+  - cd ..; git clone https://github.com/kward/shunit2.git; cd $my_github
 
 script: 
   - ./test
